Security/apparmor-disk-write-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: apparmor-disk-write
  annotations:
    container.apparmor.security.beta.kubernetes.io/busybox: localhost/deny-write
spec:
  containers:
  - name: busybox
    image: busybox
    command: ['sh', '-c', 'while true; do echo "I write to the disk!" > diskwrite.log; sleep 5; done']
