Security/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
  labels:
    app: client
  namespace: securitydemo
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do curl -m 3 10.20.1.8; sleep 5; done']
